Atualizando classes e criando de adm nas migrations

--- a/Web.config
+++ b/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="StringConexao" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;database=Dory2;uid=root;pwd=''" />
+    <add name="StringConexao" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;database=Dory2;uid=root;pwd=" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
