--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -121,10 +121,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\EnderecoesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103222304313_CriacaoBanco.cs" />
+    <Compile Include="Migrations\202103222304313_CriacaoBanco.Designer.cs">
+      <DependentUpon>202103222304313_CriacaoBanco.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Casos.cs" />
@@ -137,6 +140,7 @@
     <Compile Include="Models\Pessoa.cs" />
     <Compile Include="Models\Responsavel.cs" />
     <Compile Include="Models\Tutorias.cs" />
+    <Compile Include="Models\VMResponsavel.cs" />
     <Compile Include="Models\Vulneravel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -184,11 +188,6 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Enderecoes\Create.cshtml" />
-    <Content Include="Views\Enderecoes\Delete.cshtml" />
-    <Content Include="Views\Enderecoes\Details.cshtml" />
-    <Content Include="Views\Enderecoes\Edit.cshtml" />
-    <Content Include="Views\Enderecoes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -197,6 +196,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202103222304313_CriacaoBanco.resx">
+      <DependentUpon>202103222304313_CriacaoBanco.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
