Classe funções e função de criptografia

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Models\Denuncias.cs" />
     <Compile Include="Models\Desaparecido.cs" />
     <Compile Include="Models\Endereco.cs" />
+    <Compile Include="Models\Funcoes.cs" />
     <Compile Include="Models\Mais_infos.cs" />
     <Compile Include="Models\Pessoa.cs" />
     <Compile Include="Models\Responsavel.cs" />
