Login quase completo

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -122,12 +122,17 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ResponsavelsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\202103232321549_CriacaoBanco.cs" />
     <Compile Include="Migrations\202103232321549_CriacaoBanco.Designer.cs">
       <DependentUpon>202103232321549_CriacaoBanco.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103240010541_Alteracao.cs" />
+    <Compile Include="Migrations\202103240010541_Alteracao.Designer.cs">
+      <DependentUpon>202103240010541_Alteracao.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Casos.cs" />
@@ -189,6 +194,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Responsavels\Create.cshtml" />
+    <Content Include="Views\Responsavels\Delete.cshtml" />
+    <Content Include="Views\Responsavels\Details.cshtml" />
+    <Content Include="Views\Responsavels\Edit.cshtml" />
+    <Content Include="Views\Responsavels\Index.cshtml" />
+    <Content Include="Views\Responsavels\Acesso.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -201,6 +212,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202103232321549_CriacaoBanco.resx">
       <DependentUpon>202103232321549_CriacaoBanco.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103240010541_Alteracao.resx">
+      <DependentUpon>202103240010541_Alteracao.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
