--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -151,6 +151,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\register.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -197,6 +198,7 @@
     <Content Include="Views\Responsavels\Edit.cshtml" />
     <Content Include="Views\Responsavels\Index.cshtml" />
     <Content Include="Views\Responsavels\Acesso.cshtml" />
+    <Content Include="Views\Shared\_Register.cshtml" />
     <Content Include="Views\Responsavels\Cadastro.cshtml" />
   </ItemGroup>
   <ItemGroup>
