--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="URLSite" value="https://localhost:44390"/> <!-- Alterar sempre que executar com a url certa -->
   </appSettings>
   <connectionStrings>
     <add name="StringConexao" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;database=Dory2;uid=root;pwd=" />
@@ -24,6 +25,13 @@
       <forms loginUrl="~/Responsavel/Acesso" timeout="2880" />
     </authentication>
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network host="smtp.gmail.com" port="587" userName="fatecgtaads@gmail.com" enableSsl="true" password="sgkphybswjbbbthy" defaultCredentials="false"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
