Redefinição de senha e tela de redefinição

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Responsavels\Cadastro.cshtml" />
     <Content Include="Views\Responsavels\Acesso.cshtml" />
     <Content Include="Views\Responsavels\EsqueceuSenha.cshtml" />
+    <Content Include="Views\Responsavels\Redefinir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
