--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -157,6 +157,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
     <Content Include="Content\Home.css" />
+    <Content Include="Content\Perfil.css" />
     <Content Include="Images\banner 2.jpg" />
     <Content Include="Images\banner 3.jpg" />
     <Content Include="Images\perfil.jpg" />
