Ultima etapa de cadastro de desaparecido

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -229,6 +229,7 @@
     <Content Include="Views\Responsavels\UploadFotoPerfil.cshtml" />
     <Content Include="Views\Responsavels\EditarPerfil.cshtml" />
     <Content Include="Views\Desaparecido\FinalRegisterDesaparecido.cshtml" />
+    <Content Include="Views\Desaparecido\ConfirmationRegisterDesaparecido.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
