--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -160,6 +160,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
+    <Content Include="Content\Exibicao.css" />
     <Content Include="Content\Home.css" />
     <Content Include="Content\Listagem.css" />
     <Content Include="Content\Perfil.css" />
@@ -232,6 +233,7 @@
     <Content Include="Views\Desaparecido\FinalRegisterDesaparecido.cshtml" />
     <Content Include="Views\Desaparecido\ConfirmationRegisterDesaparecido.cshtml" />
     <Content Include="Views\Desaparecido\ListDesaparecido.cshtml" />
+    <Content Include="Views\Desaparecido\ListOneDesaparecido.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
