Terminando a tela de etapa dois cadastro do usuario (front)

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -234,6 +234,7 @@
     <Content Include="Views\Desaparecido\ConfirmationRegisterDesaparecido.cshtml" />
     <Content Include="Views\Desaparecido\ListDesaparecido.cshtml" />
     <Content Include="Views\Desaparecido\ListOneDesaparecido.cshtml" />
+    <Content Include="Views\Responsavels\TerminarRegistro.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
