--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -231,7 +231,7 @@
     <Content Include="Views\Desaparecido\ListOneDesaparecido.cshtml" />
     <Content Include="Views\Responsavels\TerminarRegistro.cshtml" />
     <Content Include="Views\Desaparecido\ListDesaparecidoTest.cshtml" />
-    <Content Include="Views\Desaparecido\ListDesaparecidoTest2.cshtml" />
+    <Content Include="Views\Desaparecido\ListMeusDesaparecidos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
