--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -157,6 +157,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
+    <Content Include="Content\Denuncias.css" />
     <Content Include="Content\Exibicao.css" />
     <Content Include="Content\Home.css" />
     <Content Include="Content\Listagem.css" />
@@ -242,7 +243,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Uploads\" />
-    <Folder Include="Views\Denuncia\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
