VM edição do desaparecido Correção upload foto perfil Não ta apagando as fotos da pasta

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Denuncias\Details.cshtml" />
     <Content Include="Views\Denuncias\Edit.cshtml" />
     <Content Include="Views\Denuncias\Index.cshtml" />
+    <Content Include="Views\Desaparecido\EditarDadosPessoais.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
