--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -249,6 +249,8 @@
     <Content Include="Views\Vulneravels\Index.cshtml" />
     <Content Include="Views\Vulneravels\InitialRegisterVulneravel.cshtml" />
     <Content Include="Views\Vulneravels\FinalRegisterVulneravel.cshtml" />
+    <Content Include="Views\Vulneravels\ListMeusVulneraveis.cshtml" />
+    <Content Include="Views\Vulneravels\ListOneVulneravel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
