Upload foto de perfil vulneravel Exibindo foto de perfil de vulneravel e desaparecido em todos os lugares Validação em telas de edição Erro ao  tentar entrar em desaparecido que era meu

--- a/Dory2.csproj
+++ b/Dory2.csproj
@@ -257,11 +257,11 @@
     <Content Include="Views\Desaparecido\EditarMaisInfos.cshtml" />
     <Content Include="Views\Desaparecido\ViEstaPessoa.cshtml" />
     <Content Include="Views\Desaparecido\UploadFotoPerfil.cshtml" />
+    <Content Include="Views\Vulneravels\UploadFotoPerfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Uploads\" />
-    <Folder Include="Views\Vulneravel\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
